--- a/test.html
+++ b/test.html
@@ -46,7 +46,8 @@
     </header>
     
     <main id="content" class="main-content" role="main">
-      {{ content }}
+      <h1>otaxgaming</h1>
+      Selamat datang.
 
       <footer class="site-footer">
         <!--{% if site.github.is_project_page %}
