--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <html>
 	<head>
 		<title>Landed by HTML5 UP</title>
+		<link rel="shortcut icon" type="image/png" href="/images/OTAXGaming.png">
+    
+		<meta property="og:title" content="Otax Gaming">
+		<meta property="og:description" content="Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night dan banyak lagi!">
+		<meta property="og:image" content="https://otaxgaming.com/images/OTAXGaming.png">
+		
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +23,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html"><img src="https://otaxgaming.com/images/OTAXGaming.png" alt=""/></a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -48,11 +54,10 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>Otax Gaming</h2>
+							<p>Komuniti PC Gaming Malaysia</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="images/OTAXGaming.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
