--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html"><img src="https://otaxgaming.com/images/OTAXGaming.png" alt=""/></a></h1>
+					<h1 id="logo"><a href="index.html"><img src="https://otaxgaming.com/images/OTAXGaming.png" alt="" style="40px"/></a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
