--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>Otax Gaming</title>
 		<link rel="shortcut icon" type="image/png" href="/images/OTAXGaming.png">
     
 		<meta property="og:title" content="Otax Gaming">
@@ -23,7 +23,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html"><img src="https://otaxgaming.com/images/OTAXGaming.png" alt="" style="40px"/></a></h1>
+					<h1 id="logo"><a href="index.html"><img src="https://otaxgaming.com/images/OTAXGaming.png" alt="" style="height: 50px; margin-top: 5px;"/></a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
