--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html"><img src="https://otaxgaming.com/images/OTAXGaming.png" alt="" style="height: 50px; margin-top: 5px;"/></a></h1>
+					<h1 id="logo"><a href="index.html"><img src="images/OTAXGaming.png" alt="" style="height: 50px; margin-top: 5px;"/></a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -57,7 +57,7 @@
 							<h2>Otax Gaming</h2>
 							<p>Komuniti PC Gaming Malaysia</p>
 						</header>
-						<span class="image"><img src="images/OTAXGaming.png" alt="" /></span>
+						<span class="image"><img src="images/OTAXGamingHome.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
