--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<h1 id="logo"><a href="index.html"><img src="images/OTAXGaming.png" alt="" style="height: 50px; margin-top: 5px;"/></a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="https://otaxgaming.com/">Home</a></li>
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
