--- a/index.html
+++ b/index.html
@@ -70,16 +70,12 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Otax Gaming</h2>
+										<p>Pengenalan</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night dan banyak lagi!</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
