--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								</ul>
 							</li>
 							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="#" class="button primary">Discord</a></li>
 						</ul>
 					</nav>
 				</header>
