--- a/index.html
+++ b/index.html
@@ -78,11 +78,7 @@
 									<p>Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night dan banyak lagi!</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>Otax Gaming ditubuhkan pada tahun 2019 oleh Tajul bertujuan untuk merapatkan silaturahim di antara rakyat-rakyat Malaysia. Sehingga kini Otax Gaming dapat menarik perhatian dari pemain-pemain tegar dan juga pemain-pemain santai.</p>
 								</div>
 							</div>
 						</div>
