--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html"><img src="images/OTAXGaming.png" alt="" style="height: 50px; margin-top: 5px;"/></a></h1>
+					<h1 id="logo"><a href="https://otaxgaming.com/"><img src="images/OTAXGaming.png" alt="" style="height: 50px; margin-top: 5px;"/></a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="https://otaxgaming.com/">Home</a></li>
@@ -70,8 +70,8 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Otax Gaming</h2>
-										<p>Pengenalan</p>
+										<h2><b>Otax Gaming</b></h2>
+										<p>Pengenalan Otax</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
