--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 					<div class="content">
 						<header>
 							<h2>Otax Gaming</h2>
-							<p>Komuniti PC Gaming Malaysia</p>
+							<p>Komuniti PC Gaming Malaysia<br>
+							Game night, movie night, podcast mengenai pelbagai topik dan banyak lagi!</p>
 						</header>
 						<span class="image"><img src="images/OTAXGamingHome.png" alt="" /></span>
 					</div>
@@ -71,11 +72,11 @@
 								<div class="col-4 col-12-medium">
 									<header>
 										<h2><b>Otax Gaming</b></h2>
-										<p>Pengenalan Otax</p>
+										<p>Pengenalan dan Sejarah</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night dan banyak lagi!</p>
+									<p>Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night, podcast mengenai pelbagai topik dan banyak lagi!</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Otax Gaming ditubuhkan pada tahun 2019 oleh Tajul bertujuan untuk merapatkan silaturahim di antara rakyat-rakyat Malaysia. Sehingga kini Otax Gaming dapat menarik perhatian dari pemain-pemain tegar dan juga pemain-pemain santai.</p>
