--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 						<header>
 							<h2>Otax Gaming</h2>
 							<p>Komuniti PC Gaming Malaysia<br>
-							Game night, movie night, podcast mengenai pelbagai topik dan banyak lagi!</p>
+							Game night, movie night, podcast<br>
+							dan banyak lagi!</p>
 						</header>
 						<span class="image"><img src="images/OTAXGamingHome.png" alt="" /></span>
 					</div>
