--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 					<div class="content">
 						<header>
 							<h2>Movie Night</h2>
-							<p>Saya tak tahu nak letak subheading apa sini.</p>
+							<p>Saya pun tak tahu nak letak subheading apa sini.</p>
 						</header>
-						<p>Saya tak tahu nak letak isi apa sini.</p>
+						<p>Saya lagi tak tahu nak letak isi apa sini. MANA GAR.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Contoh Filem</a></li>
 						</ul>
