--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="shortcut icon" type="image/png" href="/images/OTAXGaming.png">
     
 		<meta property="og:title" content="Otax Gaming">
-		<meta property="og:description" content="Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night dan banyak lagi!">
+		<meta property="og:description" content="Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night, podcast mengenai pelbagai topik dan banyak lagi!">
 		<meta property="og:image" content="https://otaxgaming.com/images/OTAXGaming.png">
 		
 		<meta charset="utf-8" />
@@ -44,7 +44,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
+							<!--<li><a href="elements.html">Elements</a></li>-->
 							<li><a href="#" class="button primary">Discord</a></li>
 						</ul>
 					</nav>
@@ -174,14 +174,11 @@
 					<div class="container">
 						<header>
 							<h2>Berminat untuk melepak di Otax?</h2>
-							<p>Sertai Discord Otax Gaming! (Nanti letak butang join Discord kat bawah)</p>
+							<p>Sertai Discord Otax Gaming!</p>
 						</header>
-						<form method="post" action="#" class="cta">
-							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
-							</div>
-						</form>
+						<div class="row gtr-uniform gtr-50">
+							<a href="#" class="button discord">Discord</a>
+						</div>
 					</div>
 				</section>
 
@@ -196,7 +193,7 @@
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Croutons5. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
