--- a/index.html
+++ b/index.html
@@ -125,11 +125,9 @@
 					<div class="container">
 						<header>
 							<h2>Berminat untuk melepak di Otax?</h2>
-							<p>Sertai Discord Otax Gaming!</p>
+							<p>Sertai Discord Otax Gaming!<br>
+							<a href="#" class="button discord">Discord</a></p>
 						</header>
-						<div class="row gtr-uniform gtr-50">
-							<a href="#" class="button discord">Discord</a>
-						</div>
 					</div>
 				</section>
 
