--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
 						<header>
 							<h2>Berminat untuk melepak di Otax?</h2>
 							<p>Sertai Discord Otax Gaming!<br>
-							<a href="#" class="button discord">Discord</a></p>
+							<ul class="actions">
+							<li><a href="#" class="button discord">Discord</a></li>
+							</ul>
 						</header>
 					</div>
 				</section>
