--- a/index.html
+++ b/index.html
@@ -34,12 +34,16 @@
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Permainan</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="#">Monster Hunter</a></li>
+											<li><a href="#">Among Us</a></li>
+											<li><a href="#">Insurgency: Sandstorm</a></li>
+											<li><a href="#">Phasmophobia</a></li>
+											<li><a href="#">Dead By Daylight</a></li>
+											<li><a href="#">Minecraft</a></li>
+											<li><a href="#">Valorant</a></li>
+											<li><a href="#">Left 4 Dead 2</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -125,10 +129,10 @@
 					<div class="container">
 						<header>
 							<h2>Berminat untuk melepak di Otax?</h2>
-							<p>Sertai Discord Otax Gaming!<br>
-							<ul class="actions">
+							<p>Sertai Discord Otax Gaming!</p>
+							<center><ul class="actions">
 							<li><a href="#" class="button discord">Discord</a></li>
-							</ul>
+							</ul></center>
 						</header>
 					</div>
 				</section>
@@ -136,12 +140,12 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<!--<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>-->
+						<li><a href="https://www.facebook.com/OTAXGamingMalaysia/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<!--<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>-->
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Croutons5. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
