--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@
 						<header>
 							<h2>Berminat untuk melepak di Otax?</h2>
 							<p>Sertai Discord Otax Gaming!</p>
-							<center><ul class="actions">
-							<li><a href="#" class="button discord">Discord</a></li>
-							</ul></center>
+							<a href="#" class="button discord">Discord</a></center>
 						</header>
 					</div>
 				</section>
