--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 									<li><a href="#">Among Us</a></li>
 									<li><a href="#">Insurgency: Sandstorm</a></li>
 									<li><a href="#">Phasmophobia</a></li>
-									<li><a href="#">Dead By Daylight</a></li>
+									<li><a href="#">Dead by Daylight</a></li>
 									<li><a href="#">Minecraft</a></li>
 									<li><a href="#">Valorant</a></li>
 									<li><a href="#">Left 4 Dead 2</a></li>
@@ -138,7 +138,7 @@
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>-->
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Croutons5. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy;2021 Croutons5. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
