Big changes including meta

--- a/games.html
+++ b/games.html
@@ -51,84 +51,67 @@
 					</nav>
 				</header>
 
-			<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h2>Otax Gaming</h2>
-							<p>Komuniti PC Gaming Malaysia<br>
-							Game night, movie night, podcast<br>
-							dan banyak lagi!</p>
+			<!-- Main -->
+				<section id="four" class="wrapper style1 special fade-up">
+					<div class="container">
+						<header class="major">
+							<h2>Games</h2>
+							<p>Link ke permainan yang dimainkan oleh Otax Gaming boleh didapati di bawah</p>
 						</header>
-						<span class="image"><img src="images/OTAXGamingHome.png" alt="" /></span>
-					</div>
-					<a href="#one" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
-					<div class="content">
-						<div class="container">
-							<div class="row">
-								<div class="col-4 col-12-medium">
-									<header>
-										<h2><b>Otax Gaming</b></h2>
-										<p>Pengenalan dan Sejarah</p>
-									</header>
-								</div>
-								<div class="col-4 col-12-medium">
-									<p>Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night, podcast mengenai pelbagai topik dan banyak lagi!</p>
-								</div>
-								<div class="col-4 col-12-medium">
-									<p>Otax Gaming ditubuhkan pada tahun 2019 oleh Tajul bertujuan untuk merapatkan silaturahim di antara rakyat-rakyat Malaysia. Sehingga kini Otax Gaming dapat menarik perhatian dari pemain-pemain tegar dan juga pemain-pemain santai.</p>
-								</div>
+						<div class="box alt">
+							<div class="row gtr-uniform">
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon solid alt major fa-chart-area"></span>
+									<h3>Monster Hunter</h3>
+									<p>Letak ayat di sini.</p>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon solid alt major fa-comment"></span>
+									<h3>Among Us</h3>
+									<p>Letak ayat di sini.</p>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon solid alt major fa-flask"></span>
+									<h3>Insurgency: Sandstorm</h3>
+									<p>Letak ayat di sini.</p>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon solid alt major fa-paper-plane"></span>
+									<h3>Phasmophobia</h3>
+									<p>Letak ayat di sini.</p>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon solid alt major fa-file"></span>
+									<h3>Dead by Daylight</h3>
+									<p>Letak ayat di sini.</p>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon solid alt major fa-lock"></span>
+									<h3>Minecraft</h3>
+									<p>Letak ayat di sini.</p>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon solid alt major fa-lock"></span>
+									<h3>Valorant</h3>
+									<p>Letak ayat di sini.</p>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon solid alt major fa-lock"></span>
+									<h3>Left 4 Dead 2</h3>
+									<p>Letak ayat di sini.</p>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon solid alt major fa-lock"></span>
+									<h3>Dota 2</h3>
+									<p>Letak ayat di sini.</p>
+								</section>
 							</div>
 						</div>
-					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>Game Night</h2>
-							<p>Saya tak tahu nak letak subheading apa sini.</p>
-						</header>
-						<p>Saya tak tahu nak letak isi apa sini.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Contoh Permainan</a></li>
-						</ul>
-					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>Movie Night</h2>
-							<p>Saya pun tak tahu nak letak subheading apa sini.</p>
-						</header>
-						<p>Saya lagi tak tahu nak letak isi apa sini. MANA GAR.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Contoh Filem</a></li>
-						</ul>
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>Berminat untuk melepak di Otax?</h2>
-							<p>Sertai Discord Otax Gaming!</p>
-							<a href="#" class="button discord">Discord</a></center>
-						</header>
+						<footer class="major">
+							<ul class="actions special">
+								<li><a href="#" class="button">Magna sed feugiat</a></li>
+							</ul>
+						</footer>
 					</div>
 				</section>
 
