--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 		<link rel="shortcut icon" type="image/png" href="/images/OTAXGaming.png">
     
 		<meta property="og:site_name" content="Otax Gaming">
-		<meta property="og:title" content="Otax Gaming">
+		<meta property="og:title" content="Otax Gaming | Komuniti PC Gaming Malaysia">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://otaxgaming.com" />
-		<meta property="og:description" content="Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night, podcast mengenai pelbagai topik dan banyak lagi!">
-		<meta property="og:image" content="https://otaxgaming.com/images/OTAXGaming.png">
+		<meta property="og:description" content="Game night, movie night, podcast dan banyak lagi!">
+		<meta property="og:image" content="https://otaxgaming.com/images/OTAXGaming200x200.png">
+		<meta name="theme-color" content="#d9b00a">
 		<!-- Include this to make the og:image larger -->
 		<meta name="twitter:card" content="summary_large_image">
 		
@@ -32,19 +33,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="https://otaxgaming.com/">Home</a></li>
-							<li>
-								<a href="#">Games</a>
-								<ul>
-									<li><a href="#">Monster Hunter</a></li>
-									<li><a href="#">Among Us</a></li>
-									<li><a href="#">Insurgency: Sandstorm</a></li>
-									<li><a href="#">Phasmophobia</a></li>
-									<li><a href="#">Dead by Daylight</a></li>
-									<li><a href="#">Minecraft</a></li>
-									<li><a href="#">Valorant</a></li>
-									<li><a href="#">Left 4 Dead 2</a></li>
-								</ul>
-							</li>
+							<li><a href="https://otaxgaming.com/games">Games</a></li>
 							<!--<li><a href="elements.html">Elements</a></li>-->
 							<li><a href="#" class="button primary">Discord</a></li>
 						</ul>
