--- a/games.html
+++ b/games.html
@@ -32,19 +32,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="https://otaxgaming.com/">Home</a></li>
-							<li>
-								<a href="#">Games</a>
-								<ul>
-									<li><a href="#">Monster Hunter</a></li>
-									<li><a href="#">Among Us</a></li>
-									<li><a href="#">Insurgency: Sandstorm</a></li>
-									<li><a href="#">Phasmophobia</a></li>
-									<li><a href="#">Dead by Daylight</a></li>
-									<li><a href="#">Minecraft</a></li>
-									<li><a href="#">Valorant</a></li>
-									<li><a href="#">Left 4 Dead 2</a></li>
-								</ul>
-							</li>
+							<li><a href="https://otaxgaming.com/games">Games</a></li>
 							<!--<li><a href="elements.html">Elements</a></li>-->
 							<li><a href="#" class="button primary">Discord</a></li>
 						</ul>
