--- a/games.html
+++ b/games.html
@@ -10,11 +10,12 @@
 		<link rel="shortcut icon" type="image/png" href="/images/OTAXGaming.png">
     
 		<meta property="og:site_name" content="Otax Gaming">
-		<meta property="og:title" content="Otax Gaming">
+		<meta property="og:title" content="Senarai Game Yang Dimainkan Oleh Otax">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://otaxgaming.com" />
-		<meta property="og:description" content="Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night, podcast mengenai pelbagai topik dan banyak lagi!">
-		<meta property="og:image" content="https://otaxgaming.com/images/OTAXGaming.png">
+		<meta property="og:description" content="Termasuk Monster Hunter, Among Us, Insurgency: Sandstorm, Phasmophobia, Dead by Daylight, Minecraft, Valorant, Left 4 Dead 2, Dota 2.">
+		<meta property="og:image" content="/images/pic02.png">
+		<meta name="theme-color" content="#d9b00a">
 		<!-- Include this to make the og:image larger -->
 		<meta name="twitter:card" content="summary_large_image">
 		
@@ -34,7 +35,7 @@
 							<li><a href="https://otaxgaming.com/">Home</a></li>
 							<li><a href="https://otaxgaming.com/games">Games</a></li>
 							<!--<li><a href="elements.html">Elements</a></li>-->
-							<li><a href="#" class="button primary">Discord</a></li>
+							<li><a href="https://otaxgaming.com/discord" class="button primary">Discord</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -49,56 +50,54 @@
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Monster Hunter</h3>
-									<p>Letak ayat di sini.</p>
+									<img src="images/games/logos/mhrise-logo.png" style="height: 150px;"/>
+									<h3>Monster Hunter World/Rise</h3>
+									<p>Letak penerangan di sini.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-comment"></span>
+									<img src="images/games/logos/amongus-logo.png" style="height: 150px;"/>
 									<h3>Among Us</h3>
-									<p>Letak ayat di sini.</p>
+									<p>Letak penerangan di sini.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
+									<img src="images/games/logos/insurgencysandstorm-logo.png" style="height: 100px; margin: 25px 0 25px 0;"/>
 									<h3>Insurgency: Sandstorm</h3>
-									<p>Letak ayat di sini.</p>
+									<p>Letak penerangan di sini.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-paper-plane"></span>
+									<img src="images/games/logos/phasmophobia-logo.png" style="height: 75px; margin: 37.5px 0 37.5px 0;"/>
 									<h3>Phasmophobia</h3>
-									<p>Letak ayat di sini.</p>
+									<p>Letak penerangan di sini.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
+									<img src="images/games/logos/deadbydaylight-logo.png" style="height: 150px;"/>
 									<h3>Dead by Daylight</h3>
-									<p>Letak ayat di sini.</p>
+									<p>Letak penerangan di sini.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
+									<img src="images/games/logos/minecraft-logo.png" style="height: 150px;"/>
 									<h3>Minecraft</h3>
-									<p>Letak ayat di sini.</p>
+									<p>Letak penerangan di sini.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
+									<img src="images/games/logos/valorant-logo.png" style="height: 150px;"/>
 									<h3>Valorant</h3>
-									<p>Letak ayat di sini.</p>
+									<p>Letak penerangan di sini.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
+									<img src="images/games/logos/l4d2-logo.png" style="height: 150px;"/>
 									<h3>Left 4 Dead 2</h3>
-									<p>Letak ayat di sini.</p>
+									<p>Letak penerangan di sini.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
+									<img src="images/games/logos/dota2-logo.png" style="height: 150px;"/>
 									<h3>Dota 2</h3>
-									<p>Letak ayat di sini.</p>
+									<p>Letak penerangan di sini.</p>
 								</section>
 							</div>
 						</div>
 						<footer class="major">
-							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
-							</ul>
+							<a href="https://otaxgaming.com/discord" class="button primary">Discord</a>
 						</footer>
 					</div>
 				</section>
