--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://otaxgaming.com" />
 		<meta property="og:description" content="Game night, movie night, podcast dan banyak lagi!">
-		<meta property="og:image" content="https://otaxgaming.com/images/OTAXGaming200x200.png">
+		<meta property="og:image" content="/images/OTAXGaming200x200.png">
 		<meta name="theme-color" content="#d9b00a">
 		<!-- Include this to make the og:image larger -->
 		<meta name="twitter:card" content="summary_large_image">
@@ -35,7 +35,7 @@
 							<li><a href="https://otaxgaming.com/">Home</a></li>
 							<li><a href="https://otaxgaming.com/games">Games</a></li>
 							<!--<li><a href="elements.html">Elements</a></li>-->
-							<li><a href="#" class="button primary">Discord</a></li>
+							<li><a href="https://otaxgaming.com/discord" class="button primary">Discord</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -116,7 +116,7 @@
 						<header>
 							<h2>Berminat untuk melepak di Otax?</h2>
 							<p>Sertai Discord Otax Gaming!</p>
-							<a href="#" class="button discord">Discord</a></center>
+							<a href="https://otaxgaming.com/discord" class="button discord">Discord</a>
 						</header>
 					</div>
 				</section>
