--- a/games.html
+++ b/games.html
@@ -14,7 +14,7 @@
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://otaxgaming.com" />
 		<meta property="og:description" content="Termasuk Monster Hunter, Among Us, Insurgency: Sandstorm, Phasmophobia, Dead by Daylight, Minecraft, Valorant, Left 4 Dead 2, Dota 2.">
-		<meta property="og:image" content="/images/pic02.png">
+		<meta property="og:image" content="/images/pic02.jpg">
 		<meta name="theme-color" content="#d9b00a">
 		<!-- Include this to make the og:image larger -->
 		<meta name="twitter:card" content="summary_large_image">
