--- a/games.html
+++ b/games.html
@@ -52,12 +52,12 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img src="images/games/logos/mhrise-logo.png" style="height: 150px;"/>
 									<h3>Monster Hunter World/Rise</h3>
-									<p>Letak penerangan di sini.</p>
+									<p>"Ada segolongan orang yang menunggu Rise keluar kat PC tahun depan." - Pidot</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img src="images/games/logos/amongus-logo.png" style="height: 150px;"/>
 									<h3>Among Us</h3>
-									<p>Letak penerangan di sini.</p>
+									<p>"Menipu antara satu sama sendiri." - Pidot</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img src="images/games/logos/insurgencysandstorm-logo.png" style="height: 100px; margin: 25px 0 25px 0;"/>
