--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night, podcast mengenai pelbagai topik dan banyak lagi!</p>
+									<p>Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Among Us, Insurgency: Sandstorm, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night, podcast mengenai pelbagai topik dan banyak lagi!</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Otax Gaming ditubuhkan pada tahun 2019 oleh Tajul bertujuan untuk merapatkan silaturahim di antara rakyat-rakyat Malaysia. Sehingga kini Otax Gaming dapat menarik perhatian dari pemain-pemain tegar dan juga pemain-pemain santai.</p>
@@ -88,7 +88,7 @@
 						</header>
 						<p>Saya tak tahu nak letak isi apa sini.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Contoh Permainan</a></li>
+							<li><a href="https://otaxgaming.com/games" class="button">Games</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
