--- a/discord.html
+++ b/discord.html
@@ -1,1 +1,15 @@
 <meta http-equiv="refresh" content="0; URL=https://discord.gg/ZMkQJTvr" />
+
+<html>
+	<head>
+		<meta property="og:site_name" content="Otax Gaming">
+		<meta property="og:title" content="Otax Gaming | Komuniti PC Gaming Malaysia">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://otaxgaming.com" />
+		<meta property="og:description" content="Game night, movie night, podcast dan banyak lagi!">
+		<meta property="og:image" content="/images/OTAXGaming200x200.png">
+		<meta name="theme-color" content="#d9b00a">
+		<!-- Include this to make the og:image larger -->
+		<meta name="twitter:card" content="summary_large_image">
+	</head>
+</html>
