--- a/games.html
+++ b/games.html
@@ -34,7 +34,7 @@
 						<ul>
 							<li><a href="https://otaxgaming.com/">Home</a></li>
 							<li><a href="https://otaxgaming.com/games">Games</a></li>
-							<!--<li><a href="elements.html">Elements</a></li>-->
+							<li><a href="https://otaxgaming.com/movies">Movies</a></li>
 							<li><a href="https://otaxgaming.com/discord" class="button primary">Discord</a></li>
 						</ul>
 					</nav>
