--- a/discord.html
+++ b/discord.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0; URL=https://discord.gg/ZMkQJTvr" />
+<meta http-equiv="refresh" content="0; URL=https://discord.gg/vfR9P6jK" />
 
 <html>
 	<head>
