--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>-->
 					</ul>
 					<ul class="copyright">
-						<li>&copy;2021 Kibun. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy;2021 Kibun, Croutons5. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
